force-app/main/default/objects/ampi__Disaggregated_Indicator__c/ampi__Disaggregated_Indicator__c.object-meta.xml
<CustomObject>
    <description>Disaggregation group for an indicator</description>
    <label>Disaggregated Indicator</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Indicator Disaggregation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disaggregated Indicators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>