force-app/main/default/objects/ampi__Disaggregated_Indicator__c/fields/ampi__Disaggregate_Results__c.field-meta.xml
<CustomField>
    <fullName>ampi__Disaggregate_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[NOT IN USE] This field indicates whether to disaggregate results for this indicator.</description>
    <label>Disaggregate Results</label>
    <type>Checkbox</type>
</CustomField>