force-app/main/default/objects/ampi__Disaggregated_Indicator__c/fields/ampi__Disaggregation_Group__c.field-meta.xml
<CustomField>
    <fullName>ampi__Disaggregation_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect this junction object to a Disaggregation Group.</description>
    <label>Disaggregation Group</label>
    <referenceTo>ampi__Disaggregation_Group__c</referenceTo>
    <relationshipLabel>Disaggregated Indicators</relationshipLabel>
    <relationshipName>Disaggregated_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>