force-app/main/default/objects/ampi__Disaggregated_Indicator__c/fields/ampi__Indicator__c.field-meta.xml
<CustomField>
    <fullName>ampi__Indicator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect this junction object to an Indicator.</description>
    <label>Indicator</label>
    <referenceTo>ampi__Indicator__c</referenceTo>
    <relationshipLabel>Disaggregated Indicators</relationshipLabel>
    <relationshipName>Disaggregated_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>